--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,14 +1,16 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.2.16",
-    "com.unity.ide.rider": "1.1.4",
-    "com.unity.ide.vscode": "1.2.1",
-    "com.unity.probuilder": "4.2.3",
+    "com.unity.collab-proxy": "1.15.12",
+    "com.unity.ide.rider": "3.0.12",
+    "com.unity.ide.visualstudio": "2.0.14",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.probuilder": "5.0.3",
     "com.unity.progrids": "3.0.3-preview.6",
-    "com.unity.render-pipelines.universal": "7.3.1",
-    "com.unity.test-framework": "1.1.14",
-    "com.unity.textmeshpro": "2.0.1",
-    "com.unity.timeline": "1.2.15",
+    "com.unity.render-pipelines.universal": "12.1.5",
+    "com.unity.shadergraph": "12.1.5",
+    "com.unity.test-framework": "1.1.30",
+    "com.unity.textmeshpro": "3.0.6",
+    "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
