--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ crashlytics-build.properties
 
 UserSettings/Layouts/default-2022.dwlt
 *.dwlt
+UserSettings/Layouts/CurrentMaximizeLayout.dwlt
+UserSettings/EditorUserSettings.asset
