--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,7 @@ UserSettings/Layouts/default-2022.dwlt
 *.dwlt
 UserSettings/Layouts/CurrentMaximizeLayout.dwlt
 UserSettings/EditorUserSettings.asset
+.vscode/settings.json
+UserSettings/Layouts/CurrentMaximizeLayout.dwlt
+UserSettings/Layouts/default-2022.dwlt
+UserSettings/EditorUserSettings.asset
