Unity Update, Editor folder fixes, Material Quality Example

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,6 @@ UserSettings/EditorUserSettings.asset
 UserSettings/Layouts/CurrentMaximizeLayout.dwlt
 UserSettings/Layouts/default-2022.dwlt
 UserSettings/EditorUserSettings.asset
+*.dwlt
+.vscode/launch.json
+.vscode/extensions.json
